# docu-rag

backend/: .env.example  .gitignore  README.md  README_EMBEDDING_VERIFICATION.md  README_RAG_SEARCH.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: documents.py  embeddings.py  health.py  search.py  system.py
backend/app/config/: database.py  settings.py
backend/app/services/: document_processor.py  embedding_service.py  indexing_service.py  search_service.py  vector_store.py
backend/app/utils/: file_handlers.py  text_processing.py
backend/backups/temp_nextjs_backup/nextjs_backup/: backup_stats.json
backend/chroma_db_backup_20250625_171705/0b525fea-0bb1-47ee-9b2f-a6211f3afa23/: index_metadata.pickle
backend/chroma_db_backup_20250625_171705/a55da8f4-5b6e-4d4d-a0f3-9f64354323a9/: index_metadata.pickle
backend/docs_data/kant/: 01-critique-of-pure-reason.txt  03-critique-of-judgment.txt  05-prolegomena-to-any-future-metaphysics.txt  08-perpetual-peace.txt
backend/scripts/: backup_db.py  bulk_index_docs.py  bulk_index_docs_kant.py  bulk_index_docs_nextjs.py  debug_metadata.py  download_kant_works.py  flatten_docs.py  init_db.py  list_backups.py  reset_db.py  restore_db.py  test_embeddings.py  test_rag_search.py
backend/uploads_backup_20250625_224536/: 20250626_020207_c9c1de89_07-what-is-enlightenment.txt
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css
frontend/src/components/chat/: chat-input.tsx  chat-interface.tsx  chat-message.tsx
frontend/src/components/ui/: button.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: api.ts
